--- a/debian/rules
+++ b/debian/rules
@@ -65,7 +65,7 @@ binary-indep: build install
 	dh_testdir
 	dh_testroot
 
-	dh_installdocs
+	dh_installdocs dri2proto.txt
 	dh_installman
 	dh_install --sourcedir=debian/tmp --list-missing
 	dh_installchangelogs
