--- a/debian/rules
+++ b/debian/rules
@@ -68,7 +68,7 @@ binary-indep: build install
 	dh_installdocs dri2proto.txt
 	dh_installman
 	dh_install --sourcedir=debian/tmp --list-missing
-	dh_installchangelogs
+	dh_installchangelogs ChangeLog
 	dh_link
 	dh_strip
 	dh_compress
