--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,12 @@ Section: x11
 Priority: optional
 Maintainer: Debian X Strike Force <debian-x@lists.debian.org>
 Uploaders: Cyril Brulebois <kibi@debian.org>
-Build-Depends: debhelper (>= 5), autoconf, automake, xutils-dev (>= 1:7.5~1), pkg-config
+Build-Depends:
+ debhelper (>= 5),
+ autoconf,
+ automake,
+ xutils-dev (>= 1:7.5~1),
+ pkg-config,
 Standards-Version: 3.8.4
 Vcs-Git: git://git.debian.org/git/pkg-xorg/proto/x11proto-dri2
 Vcs-Browser: http://git.debian.org/?p=pkg-xorg/proto/x11proto-dri2.git
